syntax = "proto3";

package protos;
option go_package = "orch-go/gen/protos;protos";
option csharp_namespace = "Core";



import "google/protobuf/empty.proto";
import "transaction.proto";
import "fee_type.proto";
import "custom_types.proto";

service TransactionFeeService {
  rpc GetAll (GetAllRequest) returns (GetAllTransactionFeesResponse);
  rpc GetById (GetTransactionFeeByIdRequest) returns (TransactionFeeModel);
  rpc GetByIds (GetTransactionFeeByIdsRequest) returns (GetAllTransactionFeesResponse);
  rpc Add (AddTransactionFeeRequest) returns (TransactionFeeModel);
  rpc Update (UpdateTransactionFeeRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteTransactionFeeRequest) returns (google.protobuf.Empty);
  rpc AddBulk (AddTransactionFeeBulkRequest) returns (google.protobuf.Empty);
  rpc UpdateBulk (UpdateTransactionFeeBulkRequest) returns (google.protobuf.Empty);
  rpc DeleteBulk (DeleteTransactionFeeBulkRequest) returns (google.protobuf.Empty);
  rpc GetCount (google.protobuf.Empty) returns (CountResponse);
}

message TransactionFeeModel {
  int32 id = 1;
  optional int32 transaction_id = 2;
  optional int32 fee_id = 3;
  optional string amount = 4;
}

message GetAllTransactionFeesResponse {
  repeated TransactionFeeModel transaction_fees = 1;
}

message GetTransactionFeeByIdRequest {
  int32 id = 1;
}

message GetTransactionFeeByIdsRequest {
  repeated int32 ids = 1;
}

message AddTransactionFeeRequest {
  optional int32 transaction_id = 1;
  optional int32 fee_id = 2;
  optional string amount = 3;
}

message UpdateTransactionFeeRequest {
  int32 id = 1;
  optional int32 transaction_id = 2;
  optional int32 fee_id = 3;
  optional string amount = 4;
}

message DeleteTransactionFeeRequest {
  int32 id = 1;
}

message AddTransactionFeeBulkRequest {
  repeated AddTransactionFeeRequest transaction_fees = 1;
}

message UpdateTransactionFeeBulkRequest {
  repeated UpdateTransactionFeeRequest transaction_fees = 1;
}

message DeleteTransactionFeeBulkRequest {
  repeated DeleteTransactionFeeRequest transaction_fees = 1;
}
